--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="icon-box">
               
               <h4><a href="">uv print</a></h4>
-              <p>key rings: glass:tiles:metals:cardboard  sdfghjk,l./;/vc selam fkr habsha jhiwote abakiya </p>
+              <p>key rings: glass:tiles:metals:cardboard:mesh:bord print:light-box </p>
             </div>
           </div>
 
