--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="https://t.me/Yoba_roots" class="get-started-btn scrollto">Get Started</a>
+      <a href="https://t.me/Yoba_roots" class="get-started-btn scrollto">order here</a>
 
      
       
