--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1 >welcome to <br> <span > Roots design and printing </span></h1>
-          <h2>beyond you paid</h2>
+          <h1 >welcome to <br> <span > Roots design and printing </span></h1> 
+          <h2>beyond you paid</h2> <br>
           <a href="https://t.me/Yoba_roots" class="btn-get-started animate__animated animate__fadeInUp scrollto">order here</a>
         </div>
       </div>
